Guest view alignment fix

--- a/src/scss/aigang.scss
+++ b/src/scss/aigang.scss
@@ -23,6 +23,7 @@ body.aig {
   max-width: 1400px;
   height: 100%;
   text-align: left;
+  margin: 0 auto;
   overflow-x: hidden;
 }
 
